--- a/STE_policy.html
+++ b/STE_policy.html
@@ -5,12 +5,12 @@
 <h1>Privacy Policy</h1>
 
 
-<p>Effective date: March 09, 2019</p>
+<p>Effective date: March 12, 2019</p>
 
 
-<p>Smash Those Bugs ("us", "we", or "our") operates the Smash Those Bugs mobile application (the "Service").</p>
+<p>Save The Earth ("us", "we", or "our") operates the Save The Earth mobile application (the "Service").</p>
 
-<p>This page informs you of our policies regarding the collection, use, and disclosure of personal data when you use our Service and the choices you have associated with that data. Our Privacy Policy  for Smash Those Bugs is created with the help of the <a href="https://www.freeprivacypolicy.com/">Free Privacy Policy website</a>.</p>
+<p>This page informs you of our policies regarding the collection, use, and disclosure of personal data when you use our Service and the choices you have associated with that data. Our Privacy Policy  for Save The Earth is created with the help of the <a href="https://www.freeprivacypolicy.com/">Free Privacy Policy website</a>.</p>
 
 <p>We use your data to provide and improve the Service. By using the Service, you agree to the collection and use of information in accordance with this policy. Unless otherwise defined in this Privacy Policy, terms used in this Privacy Policy have the same meanings as in our Terms and Conditions.</p>
 
@@ -53,7 +53,7 @@
 
 <h2>Use of Data</h2>
     
-<p>Smash Those Bugs uses the collected data for various purposes:</p>    
+<p>Save The Earth uses the collected data for various purposes:</p>    
 <ul>
 	<li>To provide advertising services.</li>
     <li>To provide and maintain the Service</li>
@@ -69,15 +69,15 @@
 <p>Your information, including Personal Data, may be transferred to — and maintained on — computers located outside of your state, province, country or other governmental jurisdiction where the data protection laws may differ than those from your jurisdiction.</p>
 <p>If you are located outside Poland and choose to provide information to us, please note that we transfer the data, including Personal Data, to Poland and process it there.</p>
 <p>Your consent to this Privacy Policy followed by your submission of such information represents your agreement to that transfer.</p>
-<p>Smash Those Bugs will take all steps reasonably necessary to ensure that your data is treated securely and in accordance with this Privacy Policy and no transfer of your Personal Data will take place to an organization or a country unless there are adequate controls in place including the security of your data and other personal information.</p>
+<p>Save The Earth will take all steps reasonably necessary to ensure that your data is treated securely and in accordance with this Privacy Policy and no transfer of your Personal Data will take place to an organization or a country unless there are adequate controls in place including the security of your data and other personal information.</p>
 
 <h2>Disclosure Of Data</h2>
 
 <h3>Legal Requirements</h3>
-<p>Smash Those Bugs may disclose your Personal Data in the good faith belief that such action is necessary to:</p>
+<p>Save The Earth may disclose your Personal Data in the good faith belief that such action is necessary to:</p>
 <ul>
     <li>To comply with a legal obligation</li>
-    <li>To protect and defend the rights or property of Smash Those Bugs</li>
+    <li>To protect and defend the rights or property of Save The Earth</li>
     <li>To prevent or investigate possible wrongdoing in connection with the Service</li>
     <li>To protect the personal safety of users of the Service or the public</li>
     <li>To protect against legal liability</li>
