--- a/STE_policy.html
+++ b/STE_policy.html
@@ -115,6 +115,6 @@
 <h2>Contact Us</h2>
 <p>If you have any questions about this Privacy Policy, please contact us:</p>
 <ul>
-        <li>By email: rk.softwaredev@gmail.com</li>
+        <li>By email: rk.softwaredev(at)gmail.com</li>
           
         </ul>
